kubernetes/mobn/06-microblog.yaml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: microblog
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - image: mobn23/microblog:1.0.0-prod
        name: microblog
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
