kubernetes/mobn/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mobn23.me
    secretName: microblog-tls
  rules:
  - host: mobn23.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microblog
            port:
              number: 5000
